--- a/Sprint 01/spr2.ipynb
+++ b/Sprint 01/spr2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "un don: 2\n",
+      "UPOM FISCAL\n",
+      "\n",
+      "‘eM, congo DESEATGHO 10, UNV F\n",
+      "\n",
+      "FORSIEY MTFC BHEE FTL\n",
+      "\n",
+      "2 aS2ane (UPL 4S70 PR TPR\n",
+      "\n",
+      "Subtotal R$\n",
+      "\n",
+      "desconto\n",
+      "\n",
+      "TOTAL, RS\n",
+      "\n",
+      "A Vista\n",
+      "\n",
+      "TROCO RS\n",
+      "\n",
+      "TeOmTT. OO oy\n",
+      "\n",
+      "Ircamento: OO: \"\n",
+      "\n",
+      "cantiet rien O02 77725\n",
+      "\n",
+      "NOME: Flavia\n",
+      "\n",
+      "2 Avista\n",
+      "CAIXAO] - VENDEDOR: ESTELA PERTILE\n",
       "\n"
      ]
     }
    ],
    "source": [
     "#━━━━━━━━━❮ler imagem❯━━━━━━━━━\n",
-    "img = cv2.imread('email.JPG')\n",
+    "img = cv2.imread('nota_fiscal.jpg')\n",
     "\n",
     "#━━━━━━━━━❮extraindo texto da imagem❯━━━━━━━━━\n",
     "pth =\"C:\\Program Files\\Tesseract-OCR\"\n",
