--- a/Python/CP2.ipynb
+++ b/Python/CP2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       "━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━\n",
       "         Lista de Lojas\n",
       "━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━\n",
-      "1: pedro\n",
+      "1: lolja\n",
       "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n",
       "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
       "1 - Cadastrar loja\n",
@@ -67,7 +67,7 @@
       "━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━\n",
       "       Lista de Produtos\n",
       "━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━\n",
-      "1: mel - R$15.00 - Loja: pedro\n",
+      "2: prod - R$120.50 - Loja: lolja\n",
       "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n",
       "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
       "1 - Cadastrar loja\n",
