--- a/Sprint 01/spr2.ipynb
+++ b/Sprint 01/spr2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,69 +23,88 @@
     "from datetime import datetime\n",
     "import sys\n",
     "import re\n",
-    "import pytesseract  #ele não instala corretamente, usar instalador para windows https://github.com/UB-Mannheim/tesseract/wiki\n",
-    "                    #instalado em C:\\Program Files\\Tesseract-OCR\n",
+    "import urllib.request\n",
     "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# import pytesseract  #ele não instala corretamente, usar instalador para windows https://github.com/UB-Mannheim/tesseract/wiki\n",
+    "                    #instalado em C:\\Program Files\\Tesseract-OCR\n",
     "#━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━\n",
     "\n",
-    "ano_atual = datetime.now().year\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "un don: 2\n",
-      "UPOM FISCAL\n",
-      "\n",
-      "‘eM, congo DESEATGHO 10, UNV F\n",
-      "\n",
-      "FORSIEY MTFC BHEE FTL\n",
-      "\n",
-      "2 aS2ane (UPL 4S70 PR TPR\n",
-      "\n",
-      "Subtotal R$\n",
-      "\n",
-      "desconto\n",
-      "\n",
-      "TOTAL, RS\n",
-      "\n",
-      "A Vista\n",
-      "\n",
-      "TROCO RS\n",
-      "\n",
-      "TeOmTT. OO oy\n",
-      "\n",
-      "Ircamento: OO: \"\n",
-      "\n",
-      "cantiet rien O02 77725\n",
-      "\n",
-      "NOME: Flavia\n",
-      "\n",
-      "2 Avista\n",
-      "CAIXAO] - VENDEDOR: ESTELA PERTILE\n",
-      "\n"
+      "C:\\Users\\pytho\\AppData\\Local\\Temp\\ipykernel_27248\\2824571787.py:28: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  features = np.array(features).squeeze()\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'train'\n> Overload resolution failed:\n>  - ml_StatModel.train() takes at most 2 arguments (3 given)\n>  - samples data type = 17 is not supported\n>  - Expected Ptr<cv::UMat> for argument 'samples'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m features \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(features)\u001b[39m.\u001b[39msqueeze()\n\u001b[0;32m     29\u001b[0m labels \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(labels)\n\u001b[1;32m---> 30\u001b[0m svm\u001b[39m.\u001b[39;49mtrain(features, cv2\u001b[39m.\u001b[39;49mml\u001b[39m.\u001b[39;49mROW_SAMPLE, labels)\n\u001b[0;32m     32\u001b[0m \u001b[39m# Passo 4: Carregar a imagem de teste\u001b[39;00m\n\u001b[0;32m     33\u001b[0m test_image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(\u001b[39m\"\u001b[39m\u001b[39mtest_bike_image.jpg\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'train'\n> Overload resolution failed:\n>  - ml_StatModel.train() takes at most 2 arguments (3 given)\n>  - samples data type = 17 is not supported\n>  - Expected Ptr<cv::UMat> for argument 'samples'\n"
      ]
     }
    ],
    "source": [
-    "#━━━━━━━━━❮ler imagem❯━━━━━━━━━\n",
-    "img = cv2.imread('nota_fiscal.jpg')\n",
+    "import cv2\n",
+    "import numpy as np\n",
     "\n",
-    "#━━━━━━━━━❮extraindo texto da imagem❯━━━━━━━━━\n",
-    "pth =\"C:\\Program Files\\Tesseract-OCR\"\n",
+    "# Passo 1: Carregar as imagens de treinamento\n",
+    "positives = [\"bike.jpg\", \"bike2.jpg\", \"bike3.jpg\"]\n",
+    "negatives = [\"nbike.jpg\", \"nbike2.jpg\", \"nbike3.jpg\"]\n",
     "\n",
-    "pytesseract.pytesseract.tesseract_cmd = pth + \"\\Tesseract.exe\"\n",
+    "# Passo 2: Extrair características HOG das imagens\n",
+    "hog = cv2.HOGDescriptor()\n",
+    "features = []\n",
+    "labels = []\n",
     "\n",
-    "txt = pytesseract.image_to_string(img)\n",
+    "for image_path in positives + negatives:\n",
+    "    img = cv2.imread(image_path)\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    features.append(hog.compute(gray))\n",
+    "    if \"background\" in image_path:\n",
+    "        labels.append(0)  # imagem sem objeto\n",
+    "    else:\n",
+    "        labels.append(1)  # imagem com objeto\n",
     "\n",
-    "print(txt)\n",
-    "\n"
+    "# Passo 3: Treinar o classificador SVM\n",
+    "svm = cv2.ml.SVM_create()\n",
+    "svm.setType(cv2.ml.SVM_C_SVC)\n",
+    "svm.setKernel(cv2.ml.SVM_LINEAR)\n",
+    "svm.setTermCriteria((cv2.TERM_CRITERIA_MAX_ITER, 100, 1e-6))\n",
+    "\n",
+    "features = np.array(features).squeeze()\n",
+    "labels = np.array(labels)\n",
+    "svm.train(features, cv2.ml.ROW_SAMPLE, labels)\n",
+    "\n",
+    "# Passo 4: Carregar a imagem de teste\n",
+    "test_image = cv2.imread(\"test_bike_image.jpg\")\n",
+    "gray = cv2.cvtColor(test_image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "# Passo 5: Extrair características da imagem de teste\n",
+    "test_features = hog.compute(gray).squeeze()\n",
+    "\n",
+    "# Passo 6: Prever o objeto na imagem de teste\n",
+    "result = svm.predict(test_features.reshape(1, -1))[1]\n",
+    "\n",
+    "if result == 1:\n",
+    "    print(\"Objeto detectado!\")\n",
+    "else:\n",
+    "    print(\"Objeto não detectado.\")"
    ]
   },
   {
@@ -94,6 +113,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# usar funções lambda\n",
+    "\n",
+    "ano_atual = datetime.now().year\n",
+    "\n",
     "def mostrar_menu():\n",
     "    print('━━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━━━')\n",
     "    print('1. Cadastrar bike ')\n",
