--- a/Sprint 01/spr2.ipynb
+++ b/Sprint 01/spr2.ipynb
@@ -9,112 +9,250 @@
     "# Achei bem interessante a abordagem.\n",
     "# Faltou um vinculo entre bicicleta e cliente. Além de não ser armazenado em nenhum lugar os dados digitados. Poderia ter usado uma lista para armazenar tudo que foi cadastrado.\n",
     "# Vi também que é feito uma checagem de dados. Uma vez feito esse tipo de validação, o ideal é parar a execução uma vez que o dado é inválido. Rodando o código, se eu digitar um email inválido, o programa segue normalmente.\n",
-    "# E as fotos? Isso não foi pensado? Sei que não temos como trabalhar com isso, mas a ideia aqui era mais mostrar a organização do que o código pronto em si. Então coloquem isso na estrutura de vocês, ok?\n",
-    "# No mais, parabéns pelo que foi mostrado. É um bom começo para organizar esse tipo de programa."
+    "# E as fotos? Isso não foi pensado? Sei que não temos como trabalhar com isso, mas a ideia aqui era mais mostrar a organização do que o código pronto em si. Então coloquem isso na estrutura de vocês, ok?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39murllib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrequest\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv2a\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2a'"
+     ]
+    }
+   ],
    "source": [
     "#━━━━━━━━━❮Bibliotecas❯━━━━━━━━━\n",
     "from datetime import datetime\n",
     "import sys\n",
     "import re\n",
     "import urllib.request\n",
-    "import cv2\n",
+    "import cv2a\n",
     "import numpy as np\n",
-    "\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.applications import MobileNetV2\n",
+    "from tensorflow.keras.layers import AveragePooling2D, Dropout, Flatten, Dense, Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers.schedules import ExponentialDecay\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.models import load_model\n",
     "# import pytesseract  #ele não instala corretamente, usar instalador para windows https://github.com/UB-Mannheim/tesseract/wiki\n",
     "                    #instalado em C:\\Program Files\\Tesseract-OCR\n",
-    "#━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━\n",
-    "\n",
-    "\n"
+    "#━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pytho\\AppData\\Local\\Temp\\ipykernel_27248\\2824571787.py:28: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  features = np.array(features).squeeze()\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'train'\n> Overload resolution failed:\n>  - ml_StatModel.train() takes at most 2 arguments (3 given)\n>  - samples data type = 17 is not supported\n>  - Expected Ptr<cv::UMat> for argument 'samples'\n",
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] O sistema não pode encontrar o caminho especificado: 'Sprint 01\\\\com_bike'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m features \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(features)\u001b[39m.\u001b[39msqueeze()\n\u001b[0;32m     29\u001b[0m labels \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(labels)\n\u001b[1;32m---> 30\u001b[0m svm\u001b[39m.\u001b[39;49mtrain(features, cv2\u001b[39m.\u001b[39;49mml\u001b[39m.\u001b[39;49mROW_SAMPLE, labels)\n\u001b[0;32m     32\u001b[0m \u001b[39m# Passo 4: Carregar a imagem de teste\u001b[39;00m\n\u001b[0;32m     33\u001b[0m test_image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(\u001b[39m\"\u001b[39m\u001b[39mtest_bike_image.jpg\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'train'\n> Overload resolution failed:\n>  - ml_StatModel.train() takes at most 2 arguments (3 given)\n>  - samples data type = 17 is not supported\n>  - Expected Ptr<cv::UMat> for argument 'samples'\n"
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 27\u001b[0m\n\u001b[0;32m     24\u001b[0m data \u001b[39m=\u001b[39m []\n\u001b[0;32m     25\u001b[0m labels \u001b[39m=\u001b[39m []\n\u001b[1;32m---> 27\u001b[0m \u001b[39mfor\u001b[39;00m image_file \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(bicycle_dir):\n\u001b[0;32m     28\u001b[0m     image_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(bicycle_dir, image_file)\n\u001b[0;32m     29\u001b[0m     image \u001b[39m=\u001b[39m load_img(image_path, target_size\u001b[39m=\u001b[39m(\u001b[39m224\u001b[39m, \u001b[39m224\u001b[39m))\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] O sistema não pode encontrar o caminho especificado: 'Sprint 01\\\\com_bike'"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
+    "import os\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.applications import MobileNetV2\n",
+    "from tensorflow.keras.layers import AveragePooling2D, Dropout, Flatten, Dense, Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers.schedules import ExponentialDecay\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.models import load_model\n",
     "\n",
-    "# Passo 1: Carregar as imagens de treinamento\n",
-    "positives = [\"bike.jpg\", \"bike2.jpg\", \"bike3.jpg\"]\n",
-    "negatives = [\"nbike.jpg\", \"nbike2.jpg\", \"nbike3.jpg\"]\n",
+    "# Ativar a execução ansiosa\n",
+    "tf.config.run_functions_eagerly(True)\n",
     "\n",
-    "# Passo 2: Extrair características HOG das imagens\n",
-    "hog = cv2.HOGDescriptor()\n",
-    "features = []\n",
+    "# Definir as pastas de imagens de bicicleta e não bicicleta\n",
+    "bicycle_dir = r'Sprint 01\\com_bike'\n",
+    "not_bicycle_dir = r'Sprint 01\\sem_bike'\n",
+    "\n",
+    "# Carregar e pré-processar as imagens\n",
+    "data = []\n",
     "labels = []\n",
     "\n",
-    "for image_path in positives + negatives:\n",
-    "    img = cv2.imread(image_path)\n",
-    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "    features.append(hog.compute(gray))\n",
-    "    if \"background\" in image_path:\n",
-    "        labels.append(0)  # imagem sem objeto\n",
+    "for image_file in os.listdir(bicycle_dir):\n",
+    "    image_path = os.path.join(bicycle_dir, image_file)\n",
+    "    image = load_img(image_path, target_size=(224, 224))\n",
+    "    image = img_to_array(image)\n",
+    "    image = preprocess_input(image)\n",
+    "\n",
+    "    data.append(image)\n",
+    "    labels.append('bicycle')\n",
+    "\n",
+    "for image_file in os.listdir(not_bicycle_dir):\n",
+    "    image_path = os.path.join(not_bicycle_dir, image_file)\n",
+    "    image = load_img(image_path, target_size=(224, 224))\n",
+    "    image = img_to_array(image)\n",
+    "    image = preprocess_input(image)\n",
+    "\n",
+    "    data.append(image)\n",
+    "    labels.append('not_bicycle')\n",
+    "\n",
+    "# Codificar os rótulos\n",
+    "lb = LabelBinarizer()\n",
+    "labels = lb.fit_transform(labels)\n",
+    "labels = tf.keras.utils.to_categorical(labels)\n",
+    "\n",
+    "# Dividir os dados em conjuntos de treinamento e teste\n",
+    "(trainX, testX, trainY, testY) = train_test_split(np.array(data), np.array(labels), test_size=0.20, stratify=labels, random_state=42)\n",
+    "\n",
+    "# Construir o gerador de imagens de treinamento para data augmentation\n",
+    "aug = ImageDataGenerator(rotation_range=20, zoom_range=0.15, width_shift_range=0.2, height_shift_range=0.2, shear_range=0.15, horizontal_flip=True, fill_mode='nearest')\n",
+    "\n",
+    "# Carregar a rede MobileNetV2, garantindo que os conjuntos de camadas FC sejam deixados de fora\n",
+    "baseModel = MobileNetV2(weights='imagenet', include_top=False, input_tensor=Input(shape=(224, 224, 3)))\n",
+    "\n",
+    "# Construir a cabeça do modelo que será colocada em cima do modelo base\n",
+    "headModel = baseModel.output\n",
+    "headModel = AveragePooling2D(pool_size=(7, 7))(headModel)\n",
+    "headModel = Flatten(name='flatten')(headModel)\n",
+    "headModel = Dense(128, activation='relu')(headModel)\n",
+    "headModel = Dropout(0.5)(headModel)\n",
+    "headModel = Dense(2, activation='softmax')(headModel)\n",
+    "\n",
+    "# Colocar a cabeça do modelo no modelo base\n",
+    "model = Model(inputs=baseModel.input, outputs=headModel)\n",
+    "\n",
+    "# Loop sobre todas as camadas no modelo base e congelá-las para que não sejam atualizadas durante o primeiro processo de treinamento\n",
+    "for layer in baseModel.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# Configurar a programação de decaimento para a taxa de aprendizado\n",
+    "lr_schedule = ExponentialDecay(\n",
+    "    initial_learning_rate=1e-4,\n",
+    "    decay_steps=10000,\n",
+    "    decay_rate=0.9)\n",
+    "\n",
+    "opt = Adam(learning_rate=lr_schedule)\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'], run_eagerly=True)\n",
+    "\n",
+    "# Treinar a cabeça do modelo\n",
+    "model.fit(aug.flow(trainX, trainY, batch_size=32), steps_per_epoch=len(trainX) // 32, validation_data=(testX, testY), validation_steps=len(testX) // 32, epochs=20)\n",
+    "\n",
+    "# Salvar o modelo treinado\n",
+    "model.save('my_model.h5')\n",
+    "\n",
+    "# Carregar o modelo treinado anteriormente\n",
+    "model = load_model('my_model.h5')\n",
+    "\n",
+    "def preprocess_image(image_path):\n",
+    "    # Carregar a imagem e ajustá-la para o tamanho que o modelo espera\n",
+    "    image = load_img(image_path, target_size=(224, 224))\n",
+    "    image = img_to_array(image)\n",
+    "    image = preprocess_input(image)\n",
+    "    return image\n",
+    "\n",
+    "def classificar_imagem(caminho_imagem):\n",
+    "    # Pré-processar a imagem\n",
+    "    imagem = preprocess_image(caminho_imagem)\n",
+    "\n",
+    "    # Fazer a previsão usando o modelo\n",
+    "    pred = model.predict(np.expand_dims(imagem, axis=0))\n",
+    "\n",
+    "    # A previsão é um vetor de probabilidades. Vamos pegar a classe com a maior probabilidade\n",
+    "    classe_predita = np.argmax(pred, axis=1)\n",
+    "\n",
+    "    # Retornar a classe predita. No nosso caso, 0 é \"não bicicleta\" e 1 é \"bicicleta\".\n",
+    "    if classe_predita == 0:\n",
+    "        print('Imagem invalida')\n",
+    "        sys.exit[0]\n",
+    "        return \"não bicicleta\"\n",
     "    else:\n",
-    "        labels.append(1)  # imagem com objeto\n",
+    "        return \"bicicleta\"\n",
     "\n",
-    "# Passo 3: Treinar o classificador SVM\n",
-    "svm = cv2.ml.SVM_create()\n",
-    "svm.setType(cv2.ml.SVM_C_SVC)\n",
-    "svm.setKernel(cv2.ml.SVM_LINEAR)\n",
-    "svm.setTermCriteria((cv2.TERM_CRITERIA_MAX_ITER, 100, 1e-6))\n",
-    "\n",
-    "features = np.array(features).squeeze()\n",
-    "labels = np.array(labels)\n",
-    "svm.train(features, cv2.ml.ROW_SAMPLE, labels)\n",
-    "\n",
-    "# Passo 4: Carregar a imagem de teste\n",
-    "test_image = cv2.imread(\"test_bike_image.jpg\")\n",
-    "gray = cv2.cvtColor(test_image, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "# Passo 5: Extrair características da imagem de teste\n",
-    "test_features = hog.compute(gray).squeeze()\n",
-    "\n",
-    "# Passo 6: Prever o objeto na imagem de teste\n",
-    "result = svm.predict(test_features.reshape(1, -1))[1]\n",
-    "\n",
-    "if result == 1:\n",
-    "    print(\"Objeto detectado!\")\n",
-    "else:\n",
-    "    print(\"Objeto não detectado.\")"
+    "caminho_imagem = 'Sprint 01\\test_bike_image.jpg'\n",
+    "print(classificar_imagem(caminho_imagem))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "━━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━━━\n",
+      "1. Cadastrar bike \n",
+      "2. Cadastrar cliente\n",
+      "3. Sair\n",
+      "━━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━━━\n",
+      "\n",
+      "\n",
+      "Email Verificado com Sucesso\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Cliente cadastrado:\n",
+      "Nome: pedro\n",
+      "Sexo: femea\n",
+      "CPF: 42159315842\n",
+      "Email: maheborgas@gmail.com\n",
+      "Telefone: 11950602005\n",
+      "Idade: 18\n",
+      "CEP: 02404000\n",
+      "━━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━━━\n",
+      "1. Cadastrar bike \n",
+      "2. Cadastrar cliente\n",
+      "3. Sair\n",
+      "━━━━━━━━━━━━━━━❮◆❯━━━━━━━━━━━━━━━━\n",
+      "\n",
+      "\n",
+      "Email Invalido\n",
+      "Por conta disso, código será interrompido\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pytho\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# usar funções lambda\n",
-    "\n",
     "ano_atual = datetime.now().year\n",
     "\n",
     "def mostrar_menu():\n",
@@ -133,6 +271,14 @@
     "    print('')\n",
     "\n",
     "    ano = int(input('Digite o ano de fabricação da bicicleta (entre 1900 e {}):'.format(ano_atual)))\n",
+    "    print('')\n",
+    "\n",
+    "    foto =input('Digite o caminho da imagem: ')  #a ideia aqui é carregar criar um caminho para futuramente usar\n",
+    "    print('')                                    #um modelo de processamento de imagem que consiga detectar e classificar a bicicleta\n",
+    "                                                 # utilizando uma cnn, foi criado um modelo de exemplo, mas ele ainda não funciona por \n",
+    "    # classificar_imagem(foto)\n",
+    "    print('Bike cadastrada com sucesso!')        #conta de um erro envolvendo os diretorios do meu computador, mas da pra ter uma ideia\n",
+    "\n",
     "    print('')\n",
     "\n",
     "    if ano < 1900 or ano > ano_atual:\n",
@@ -253,6 +399,13 @@
     "\n",
     "# Exibindo o dicionário"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
